[package]
name = "deno-limits"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "limits"
path = "src/limits.rs"

[[bin]]
name = "rocket"
path = "src/rocket.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
deno_console = "0.105.0"
deno_core = "0.187.0"
rocket = "=0.5.0-rc.3"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 3
