[package]
name = "deno-limits"
version = "0.0.1"
edition = "2021"
publish = false
default-run = "limits"

[[bin]]
name = "limits"
path = "src/limits.rs"

[[bin]]
name = "rocket"
path = "src/rocket.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rocket = "=0.5.0-rc.3"
tokio = { version = "1", features = ["full"] }
# Deno v1.37
deno_runtime = "0.129.0"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 3
